# gpf-web-annotation

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.backend  Dockerfile.e2e  Dockerfile.frontend  Dockerfile.gpf  Dockerfile.gpf_dev  Dockerfile.prod  Dockerfile.ubuntu  Jenkinsfile  Makefile  README.md  build.sh  build.sh.bak  compose-iossifovweb.yaml  compose-jenkins.yaml  compose-wigclust.yaml  compose.yaml  docker-compose-prod.yaml  docker-compose.yaml  environment.yml  mypy.ini  pylintrc  settings.py  urls.py
backend/: .gitignore  Dockerfile  Dockerfile.dev  MANIFEST.in  annotation.py  celery_app.py  coveragerc  dev-environment.yml  environment.yml  manage.py  pyproject.toml  pytest.ini  settings.py  urls.py
backend/gpf_web_annotation_backend/: annotation.py  celery_app.py  models.py  serializers.py
backend/gpf_web_annotation_backend/migrations/: 0001_initial.py
backend/gpf_web_annotation_frontend/: apps.py  urls.py
backend/gpf_web_annotation_project/: asgi.py  settings.py  urls.py  wsgi.py
backend/scripts/: backend_linters.sh  backend_run.sh  backend_tests.sh  grr-definition-dir.yaml  grr-definition-tests.yaml  grr-definition.yaml  supervisord-bootstrap.sh  supervisord.conf
backend/tests/: test_api.py  test_basic.py  test_users_api.py
backend/web_annotation/: about.md  annotate_helpers.py  annotation.py  annotation_base_view.py  apps.py  asgi.py  authentication.py  consumers.py  executor.py  integration_test_settings.py  mail.py  models.py  permissions.py  pipeline_cache.py  serializers.py  settings.py  settings_daphne.py  settings_default.py  settings_e2e.py  settings_gunicorn.py  tasks.py  test_settings.py  testing.py  urls.py  utils.py  views.py  wdae.sql  wsgi.py
backend/web_annotation/editor/: urls.py  views.py
backend/web_annotation/integration_tests/: conftest.py  test_api.py
backend/web_annotation/jobs/: urls.py  validate_vcf_file.py  views.py
backend/web_annotation/migrations/: 0002_resetpasswordcode.py  0003_alter_job_config_path_alter_job_input_path_and_more.py  0004_alter_job_config_path_alter_job_input_path_and_more.py  0004_job_created_at_job_is_active_alter_job_config_path_and_more.py  (+38 more)
django-gpf-web-annotation/: .dockerignore  .gitignore  Dockerfile  environment.yml  manage.py  pyproject.toml  pytest.ini
django-gpf-web-annotation/gpf_web_annotation/: asgi.py  settings.py  urls.py  wsgi.py
django-gpf-web-annotation/gpf_web_annotation_backend/: serializers.py  tasks.py  views.py
django-gpf-web-annotation/gpf_web_annotation_frontend/: views.py
django-gpf-web-annotation/gpf_web_annotation_project/: settings.py  urls.py
django-gpf-web-annotation/scripts/: backend_tests.sh
(+386 files in other folders)
