[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-gpf-web-annotation"
version = "0.1"
dependencies = [
    "django>=5.2",
]
description = "A Django app to contain GPF Web Annotation."
readme = "README.rst"
requires-python = ">= 3.12"
authors = [
    {name = "Seqpipe Ltd.", email = "lubomir.chorbadjiev@gmail.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",  # Replace "X.Y" as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://www.iossifovlab.com/"

[project.scripts]
validate_vcf_file = "web_annotation.jobs.validate_vcf_file:main"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["**tests*"]
namespaces = false

[tool.setuptools.package-data]
web_annotation = ["templates/*.html", "static/*"]