[build-system]
requires = ["setuptools>=69.3"]
build-backend = "setuptools.build_meta"

[project]
name = "django-gpf-web-annotation"
version = "0.1"
dependencies = [
    "django>=5.2",
]
description = "A Django app to contain GPF Web Annotation."
readme = "README.rst"
requires-python = ">= 3.12"
authors = [
    {name = "Seqpipe Ltd.", email = "info@seqpipe.com"},
]
classifiers = [
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 5.2",  # Replace "X.Y" as appropriate
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
]

[project.urls]
Homepage = "https://www.seqpipe.com/"

[tool.setuptools]
packages = ["gpf_web_annotation_project", "gpf_web_annotation_backend", "gpf_web_annotation_frontend"]
